[gd_scene load_steps=17 format=3 uid="uid://bfebtipda7v1r"]

[ext_resource type="Script" path="res://Player/Spell_Cast_handler.gd" id="1_p266k"]
[ext_resource type="PackedScene" uid="uid://cmku625mxhvvn" path="res://Spells/fireball/fireball_rewrite.tscn" id="2_4rhoe"]
[ext_resource type="PackedScene" uid="uid://bgb50llhrwdqu" path="res://Spells/cast_light/cast_light.tscn" id="3_777qk"]
[ext_resource type="PackedScene" uid="uid://fowttahueitf" path="res://Spells/curse_of_rah/curse_of_rah.tscn" id="4_sj62c"]
[ext_resource type="PackedScene" uid="uid://dprtktnhtow1j" path="res://Spells/blessed_aura/blessed_aura.tscn" id="5_u683b"]
[ext_resource type="PackedScene" uid="uid://drlj5p7tiypmf" path="res://Spells/magic_missile/magic_missile.tscn" id="6_d47hr"]
[ext_resource type="PackedScene" uid="uid://dc502prk7b82g" path="res://Spells/teleport/teleport.tscn" id="7_syhki"]
[ext_resource type="PackedScene" uid="uid://d34adtmnorgrd" path="res://Spells/earth_wall/earth_wall.tscn" id="8_motmf"]
[ext_resource type="PackedScene" uid="uid://dhgv5so4cctm2" path="res://Spells/magic_shield/magic_shield.tscn" id="9_fh21k"]
[ext_resource type="PackedScene" uid="uid://cfwemia6mu77g" path="res://Spells/sigil_writing/sigil_base.tscn" id="10_d44fm"]
[ext_resource type="PackedScene" uid="uid://ceutu3uyr4cf5" path="res://Spells/sigil_writing/sigil_insides/spell_circle/sigil_spell_circle.tscn" id="11_g0rj5"]
[ext_resource type="PackedScene" uid="uid://dvs8auh4r8oxv" path="res://Spells/sigil_writing/sigil_insides/Eyelid/sigil_writing_eyelid.tscn" id="11_ivdp5"]
[ext_resource type="PackedScene" uid="uid://cb0mktloa1po7" path="res://Spells/sigil_writing/sigil_insides/woh_symbol/sigil_woh_symbol.tscn" id="12_rntwi"]
[ext_resource type="PackedScene" uid="uid://bq62dt20lynow" path="res://Spells/sigil_writing/sigil_insides/sigil_small_circle/sigil_small_circle.tscn" id="14_maxl8"]
[ext_resource type="PackedScene" uid="uid://ceyyaiuvdn723" path="res://Spells/sigil_writing/sigil_insides/sigil_small_square/sigil_small_square.tscn" id="15_3havf"]
[ext_resource type="PackedScene" uid="uid://yw05xsfwhtwm" path="res://Spells/sigil_writing/sigil_insides/sigil_star/sigil_star.tscn" id="16_kjhoj"]

[node name="Spell_Cast_handler" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_p266k")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -175.0
offset_top = -111.0
offset_right = 174.0
offset_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="RichText1" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
bbcode_enabled = true
text = "Input a spell title to show incantation"
fit_content = true

[node name="RichText2" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "Input spell title or incantation"
expand_to_text_length = true
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -283.0
offset_top = -161.0
offset_right = -177.0
offset_bottom = -121.0

[node name="Label" type="Label" parent="PanelContainer3"]
layout_mode = 2
text = "Spell guide:"

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -283.0
offset_top = -123.0
offset_right = -177.0
offset_bottom = -2.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/ScrollContainer"]
layout_mode = 2

[node name="SpellContainer" type="Node2D" parent="."]

[node name="Fireball_rewrite" parent="SpellContainer" instance=ExtResource("2_4rhoe")]
visible = false

[node name="cast_light" parent="SpellContainer" instance=ExtResource("3_777qk")]
visible = false
spell_tag = 1

[node name="Curse_of_Rah" parent="SpellContainer" instance=ExtResource("4_sj62c")]
visible = false
title = "curse"
spell_tag = 2

[node name="blessed_aura" parent="SpellContainer" instance=ExtResource("5_u683b")]
visible = false
title = "Blessed Aura"
spell_tag = 1
incantation = "vect a unocht inimicus"

[node name="magic_missile" parent="SpellContainer" instance=ExtResource("6_d47hr")]
visible = false
position = Vector2(-89, -243)
title = "Magic Missile"
spell_tag = 0
incantation = "mm"

[node name="teleport" parent="SpellContainer" instance=ExtResource("7_syhki")]
visible = false
position = Vector2(508, 819)
title = "teleport"
incantation = "digredior demovio"

[node name="earth_wall" parent="SpellContainer" instance=ExtResource("8_motmf")]
visible = false
title = "earth wall"
spell_tag = 1
incantation = "earth wall 0"

[node name="magic_shield" parent="SpellContainer" instance=ExtResource("9_fh21k")]
visible = false
title = "magic shield"
spell_tag = 1
incantation = "eye for the enemy"

[node name="sigil_base" parent="SpellContainer" instance=ExtResource("10_d44fm")]
visible = false
z_as_relative = false
title = "Sigil Base"
incantation = "Draw sigil base"

[node name="sigil_writing_eyelid" parent="SpellContainer" instance=ExtResource("11_ivdp5")]
visible = false
title = "Draw Symbol: Eyelid"
incantation = "Draw symbol eyelid"

[node name="sigil_writing_spell_circle" parent="SpellContainer" instance=ExtResource("11_g0rj5")]
visible = false
title = "Sigil Symbol: Spell"
incantation = "Draw symbol spell"

[node name="sigil_writing_woh_symbol" parent="SpellContainer" instance=ExtResource("12_rntwi")]
visible = false
title = "Sigil Symbol: WoH"
incantation = "Draw symbol woh"

[node name="sigil_writing_small_circle" parent="SpellContainer" instance=ExtResource("14_maxl8")]
visible = false
title = "Sigil Symbol: Small Circle"
incantation = "Draw symbol small circle"

[node name="sigil_writing_small_square" parent="SpellContainer" instance=ExtResource("15_3havf")]
visible = false
title = "Sigil Symbol: Small Square"
incantation = "Draw symbol small square"

[node name="sigil_star" parent="SpellContainer" instance=ExtResource("16_kjhoj")]
visible = false
title = "Sigil Symbol: Star"
incantation = "Draw symbol star"

[connection signal="text_changed" from="PanelContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
